--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,11 +14,12 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;CatCollector</a></li>
+          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Vinyls</a></li>
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-          <li><a href="/index">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/vinyls">Vinyls</a></li>
         </ul>
       </div>
     </nav>
