--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,9 +17,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Vinyls</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/">Home</a></li>
-          <li><a href="/vinyls">Vinyls</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'vinyls_create' %}">Add a Vinyl</a></li>
+          <li><a href="{% url 'index' %}">View All My Vinyls</a></li>
         </ul>
       </div>
     </nav>
