--- a/main_app/templates/vinyls/index.html
+++ b/main_app/templates/vinyls/index.html
@@ -2,6 +2,7 @@
 {% block content%}
 
 {% for vinyl in vinyls %}
+<a href="{% url 'detail' vinyl.id %}">
   <div class="card">
     <div class="card-content">
       <span class="card-title">{{ vinyl.title }}</span>
@@ -10,6 +11,7 @@
         <p>Genre: {{ vinyl.genre }}</p>
     </div>
   </div>
+</a>
 {% endfor %}
 
 {% endblock %}
