Auth and Aws photo  upload

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,6 +1,6 @@
-
+ /* clear cache when changes dont appear */
   body {
-    background-color: red;
+    background-color: white;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
