party index fixed

--- a/main_app/templates/main_app/party_list.html
+++ b/main_app/templates/main_app/party_list.html
@@ -8,7 +8,7 @@
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{ party.name }}</span>
-            <p>Color: {{ party.color }}</p>
+            <p>Location: {{ party.location }}</p>
         </div>
     </div>
   </a>
