--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,7 @@
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
           {% if user.is_authenticated %}
+            <li><a href="{% url 'parties_index' %}">Parties</a></li>
             <li><a href="{% url 'parties_create' %}">Add a Party</a></li>
             <li><a href="{% url 'vinyls_create' %}">Add a Vinyl</a></li>
             <li><a href="{% url 'index' %}">View All My Vinyls</a></li>
