--- a/main_app/templates/main_app/party_confirm_delete.html
+++ b/main_app/templates/main_app/party_confirm_delete.html
@@ -8,6 +8,6 @@
   <form action="" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'party_detail' object.id %}">Cancel</a>
+    <a href="{% url 'parties_delete' object.id %}">Cancel</a>
   </form>
 {% endblock %}
