--- a/main_app/templates/vinyls/detail.html
+++ b/main_app/templates/vinyls/detail.html
@@ -76,8 +76,8 @@
   <!-- Available parties will come after this line -->
   <div class="col s6">
     <h3>Available parties</h3>
-    {% if parties.count %}
-      {% for party in parties.all %}
+    {% if vinyl.parties.count %}
+      {% for party in vinyl.parties.all %}
         <div class="card">
           <div class="card-content">
             <span class="card-title">
